--- a/src/translations/es/Experience.json
+++ b/src/translations/es/Experience.json
@@ -7,5 +7,6 @@
   },
   "Zalvadora":{
     "description": "Desarrollador frontend de zalvadora, empresa que se dedica a la formación y gestión del conocimiento, a través de su sistema (LMS + KMS) con múltiples herramientas cómodas."
-  }
+  },
+  "title": "Experiencia"
 }
