--- a/src/translations/en/Home.json
+++ b/src/translations/en/Home.json
@@ -1,6 +1,6 @@
 {
-  "title": "Hi",
-  "sub-title": "I’m Jesus Chacon",
+  "title": "Hi,",
+  "sub-title": "I’m",
   "description": "I specialize in front-end development. I am creative, proactive and committed with a passion for making things beautiful and efficient.",
   "btn": "Hire me"
 }
