--- a/src/translations/es/About.json
+++ b/src/translations/es/About.json
@@ -1,5 +1,7 @@
 {
   "description": "Un frontend developoer autónomo. Capaz de autogestionarse eficazmente durante proyectos independientes, así como de colaborar en un entorno de equipo. Siempre doy lo mejor de mí en todo lo que hago.",
+  "title": "Acerca de",
+  "title-color" : "mí",
   "service-1":{
     "title": "Dedicado",
     "description": "Doy todo mi esfuerzo para superar mis propios límites y ser la mejor versión de mí mismo que puedo ser."
